Moved CSS imports out of main.css and into index.html Enhanced dark mode support Gradient angle now alternates which I think looks good Ability width now correctly updates after resizing (though not while resizing to avoid lag)

--- a/src/styles/compatibility.css
+++ b/src/styles/compatibility.css
@@ -1,24 +1,64 @@
 @media screen and (max-width: 1920px) {
   #gallery {
-    --cols: 4 !important;
+    --cols: 4;
+  }
+
+  .slide:nth-child(8n + 1),
+  .slide:nth-child(8n + 3),
+  .slide:nth-child(8n + 6),
+  .slide:nth-child(8n + 8) {
+    --gradient-angle: var(--gradient-angle-base);
+  }
+
+  .slide:nth-child(8n + 2),
+  .slide:nth-child(8n + 4),
+  .slide:nth-child(8n + 5),
+  .slide:nth-child(8n + 7) {
+    --gradient-angle: var(--gradient-angle-reverse);
   }
 }
 
 @media screen and (max-width: 1600px) {
   #gallery {
-    --cols: 3 !important;
+    --cols: 3;
+  }
+
+  .slide:nth-child(odd) {
+    --gradient-angle: var(--gradient-angle-base);
+  }
+
+  .slide:nth-child(even) {
+    --gradient-angle: var(--gradient-angle-reverse);
   }
 }
 
 @media screen and (max-width: 1280px) {
   #gallery {
-    --cols: 2 !important;
+    --cols: 2;
+  }
+
+  .slide:nth-child(4n + 1),
+  .slide:nth-child(4n + 4) {
+    --gradient-angle: var(--gradient-angle-base);
+  }
+
+  .slide:nth-child(4n + 2),
+  .slide:nth-child(4n + 3) {
+    --gradient-angle: var(--gradient-angle-reverse);
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 720px) {
   #gallery {
-    --cols: 1 !important;
+    --cols: 1;
+  }
+
+  .slide:nth-child(odd) {
+    --gradient-angle: var(--gradient-angle-base);
+  }
+
+  .slide:nth-child(even) {
+    --gradient-angle: var(--gradient-angle-reverse);
   }
 }
 
