--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -1,5 +1,5 @@
 @media (prefers-color-scheme: dark) {
-  :root:root {
+  :root {
     --text-colour: #fff;
     --link-colour: #faf;
 
@@ -11,16 +11,30 @@
     --border-colour: #222d;
   }
 
-  .type-wrapper-inner.type-wrapper-inner,
-  .slide.slide {
+  .slide {
     --inside-1: var(--type1-foreground);
     --inside-2: var(--type2-foreground);
+
     --outside-1: var(--type1-background);
     --outside-2: var(--type2-background);
   }
 
-  .name.name,
-  .title.title {
+  .name,
+  .title {
     --ds-colour: var(--type1-background);
+  }
+
+  .name {
+    --ds-colour: #0000;
+    color: var(--type1-background);
+    font-size: calc(2rem + 2px);
+  }
+
+  .title {
+    color: var(--type1-background);
+  }
+
+  .picture {
+    --ds2-colour: var(--type1-shadow-dark);
   }
 }
